@@ -6,6 +6,8 @@ exports[`Deposit renders with date and deposit available 1`] = `
     data-link-type="wc-admin"
     href="admin.php?page=wc-admin&path=%2Fpayments%2Fdeposits%2Fdetails&id=po_mock"
   >
+    
+     
     Jan 7, 2020
   </a>
 </div>
@@ -13,23 +15,31 @@ exports[`Deposit renders with date and deposit available 1`] = `
 
 exports[`Deposit renders with date available but no deposit 1`] = `
 <div>
-  Jan 7, 2020
+  
 </div>
 `;
 
 exports[`Deposit renders with deposit but no date available 1`] = `
 <div>
+  
+</div>
+`;
+
+exports[`Deposit renders with estimated date and deposit available 1`] = `
+<div>
   <a
     data-link-type="wc-admin"
-    href="admin.php?page=wc-admin&path=%2Fpayments%2Fdeposits%2Fdetails&id=po_mock"
+    href="admin.php?page=wc-admin&path=%2Fpayments%2Fdeposits%2Fdetails&id=wcpay_estimated_mock"
   >
-    Deposit details
+    Estimated
+     
+    Jan 7, 2020
   </a>
 </div>
 `;
 
 exports[`Deposit renders with no date or deposit available 1`] = `
 <div>
-  Pending
+  
 </div>
 `;
