@@ -18,6 +18,16 @@ describe( 'Deposit', () => {
 		expect( link ).toMatchSnapshot();
 	} );
 
+	test( 'renders with estimated date and deposit available', () => {
+		const { container: link } = render(
+			<Deposit
+				dateAvailable="2020-01-07 00:00:00"
+				depositId="wcpay_estimated_mock"
+			/>
+		);
+		expect( link ).toMatchSnapshot();
+	} );
+
 	test( 'renders with date available but no deposit', () => {
 		const { container: link } = render(
 			<Deposit dateAvailable="2020-01-07 00:00:00" />
