@@ -4,6 +4,7 @@
 * Add - Notify the admin if WordPress.com user connection is broken.
 * Fix - Fix fatal error if store currency is changed after enabled (multi) currencies set.
 * Fix - Use of deprecated call-style to registerPaymentMethods. WooCommerce Payments now requires WooCommerce Blocks of at least version 3.9.0.
+* Fix - Deposit date on Transactions list page.
 
 = 2.5.0 - 2021-06-02 =
 * Fix - Fix hover dialog for close button on modals, unify styling and layout of modal buttons.
